@@ -6,6 +6,10 @@
 + *tetragono*: Add =gm_conf_eq= to equilibrium the configuration of the sampling lattice.
 *** Changed
 + *tetragono*: The physics edge index should be non-negative now.
++ *tetragono*: Use MPI IO to speed up the performance of configurations. Previously, every process will read all
+  configuration and choose a single configuration when reading, and allgather all configuration and write to file when
+  writing. Now, the program uses MPI IO to write file parallelly, and read the corresponding configuration directly
+  without read all configurations.
 *** Deprecated
 *** Removed
 + *tetragono*: Remove ansatz product state support, which may be added again in the future, but it require many updates.
